--- a/familias.html
+++ b/familias.html
@@ -72,10 +72,10 @@
         <div id="jqt">
            
             <div id="panel" class="current">
-        	<div class="background"></div>
+        	<!--<div class="background"></div>-->
                 <img class="top-image" src="images/Escolar1.png">
 
-        		<div class="mobile-container clean">
+        		<div class="mobile-container">
         			<div class="image"><img src="images/assets/nouser.png" width="120px" style="width: 100px;"></div>
         			<div class="description">
         			<p class="name">Alberto González</p>
