--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <script src="assets/src/lib/zepto.min.js" type="text/javascript" charset="utf-8"></script>
         <script src="assets/src/jqtouch.min.js" type="text/javascript" charset="utf-8"></script>
  
- 		<script>var loginurl = "http://localhost/Tele/web/app_api.php/";</script>
+ 		<script>var loginurl = "http://localhost/Tele/web/app_api.php/api/";</script>
         <script src="assets/js/login.js" type="text/javascript" charset="utf-8"></script>
         
         
