--- a/familias.html
+++ b/familias.html
@@ -76,7 +76,7 @@
         	<!--<div class="background"></div>-->
                 <img class="top-image" src="images/Escolar1.png">
 
-        		<div class="mobile-container">
+        		<div class="mobile-container clean blue">
         			<div class="image"><img src="images/assets/nouser.png" width="120px" style="width: 100px;"></div>
         			<div class="description">
         			<p class="name">Alberto González</p>
@@ -91,6 +91,7 @@
 						<a href="#doctores">Doctores<br><img width="100px" src="images/familiar/doctores.png"></a>
 					
 					</div>
+					<div style="clear:both"></div>
         		</div>
         </div>
            
@@ -98,7 +99,7 @@
         	<!--<div class="background"></div>-->
                 <img class="top-image" src="images/Escolar1.png">
 
-        		<div class="mobile-container">
+        		<div class="mobile-container clean blue">
         			<div class="image"><img src="images/assets/nouser.png" width="120px" style="width: 100px;"></div>
         			<div class="description">
         			<p class="name">Alberto González</p>
@@ -123,7 +124,7 @@
         	<!--<div class="background"></div>-->
                 <img class="top-image" src="images/Escolar1.png">
 
-        		<div class="mobile-container">
+        		<div class="mobile-container clean blue">
         			<div class="image"><img src="images/assets/nouser.png" width="120px" style="width: 100px;"></div>
         			<div class="description">
         			<p class="name">Alberto González</p>
@@ -141,7 +142,7 @@
         	<!--<div class="background"></div>-->
                 <img class="top-image" src="images/Escolar1.png">
 
-        		<div class="mobile-container">
+        		<div class="mobile-container clean blue">
         			<div class="image"><img src="images/assets/nouser.png" width="120px" style="width: 100px;"></div>
         			<div class="description">
         			<p class="name">Alberto González</p>
