--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
                                
         <link rel="stylesheet" href="assets/themes/css/apple.css" title="Apple">
         <link rel="stylesheet" href="assets/css/main.css" title="Apple">
+        <link rel="stylesheet" href="assets/css/gradients.css" title="Apple">
 
 
        <!--
@@ -150,7 +151,7 @@
     <body>
         <div id="jqt">
             <div id="home" class="current">
-			 	<div class="background"></div>
+			 	<div class="background clean blue"></div>
 				
                 <div class="scroll">
                 	<div class="swipercontainer">
@@ -170,7 +171,7 @@
         	<div class="background"></div>
                 <img class="top-image" src="images/Escolar1.png">
 
-        		<div class="mobile-container">
+        		<div class="mobile-container clean blue">
         			<h1>Identifícate con tu cuenta Medibaby</h1>
         			<form class="form login">
         				<h6>Correo electrónico</h6>
